2008-11-22  Peter Bloomfield

	* libinit_balsa/assistant_init.c: include stdlib.h.
	* libinit_balsa/assistant_page_directory.c: ditto.
	* src/balsa-app.c: ditto.
	* src/balsa-mime-widget-text.c: ditto.
	* src/spell-check.c: ditto.

2008-11-22  Peter Bloomfield

	* libbalsa/html.h: work around gtkhtml2's use of deprecated api.

2008-11-22  Peter Bloomfield

	disable deprecated apis only in svn tree (fixes bug #561875).

	* configure.in:
	* libbalsa/Makefile.am: 
	* libinit_balsa/Makefile.am:
	* src/Makefile.am:

2008-11-21  Paweł Sałek

	* src/save-restore.c: connect signal to ask interactively for SMTP
	passwords.
	* src/balsa-app.c: display the type of the password (imap/smtp).
	* libbalsa/smtp-server.c: ask for password when one needs one.


2008-11-19  Paweł Sałek

	* configure.in: detect gnome-keyring-2.24 to work around bug 556530.
	* libbalsa/{imap-,}server.c: store passwords asap to keyring (Peter B.).
	* libbalsa/server.h: use own schema only with buggy gnome-keyring.

2008-11-17  Peter Bloomfield

	* src/main-window.c: make "about" website clickable.

2008-11-17  Paweł Sałek

	* src/{folder,mailbox}-conf.c: capitalize according to HID.
	* src/{balsa-app,pref-manager}.c: ditto.
	* libbalsa/identity.c: ditto.
	* configure.in: gnome-keyring detection.
	* libbalsa/smtp-server.c: store server protocol.
	* libbalsa/imap-server.c: read password from keyring.
	* libbalsa/server.[ch]: ditto.

2008-11-16  Paweł Sałek

	* src/balsa-mime-widget-{message,text}.c: fall back to gnome_url_Show
	if gtk2 >= 2.14.0 is unavailable.
	* src/sendmsg-window.c: ditto.

2008-11-15  Peter Bloomfield

	Use gtk_show_uri instead of gnome_help_display and
	gnome_url_show, in various places; no longer need to include
	<gnome.h> in as many places.

	* libbalsa/identity.c: (help_ident_cb): replace
	gnome_help_display and gnome_url_show with gtk_show_uri.
	* libbalsa/smtp-server.c: (smtp_server_response): ditto.
	* src/address-book-config.c: (help_button_cb): ditto.